tests/golden/expected/function_argexpr.stdout.txt
Compile error: tests/fixtures/function_argexpr.lamp:11: type error: function "add" expects 2 argument(s), got 1
  11 | 	print add(1)
    |  ^
